recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:8: error: not found: value pentaKoch
	pentaKoch(levels-1, length*0.14)
        ^HexaKoch:10: error: not found: value pentaKoch
	pentaKoch(levels-1,length*0.14)
        ^HexaKoch:12: error: not found: value pentaKoch
	pentaKoch(levels-1,length*0.14)
        ^HexaKoch:14: error: not found: value pentaKoch
	pentaKoch(levels-1,length*0.14)
        ^HexaKoch:16: error: not found: value pentaKoch
	pentaKoch(levels-1,length*0.14)
        ^HexaKoch:18: error: not found: value pentaKoch
	pentaKoch(levels-1,length*0.14)}
        ^