recursion.lessons.recursion.koch.HexaKoch.scala.code
def drawCurve(levels:Int, length:Double) {
    hexaKoch(levels, length);
}
def hexaKoch(levels:Int, length:Double) {
if (levels == 0) {avance(length)}
	else {
	pentaKoch(levels-1, length*0.14)
	gauche(1.5*360/6)
	pentaKoch(levels-1,length*0.14)
	droite(360/6)
	pentaKoch(levels-1,length*0.14)
	droite(360/6)
	pentaKoch(levels-1,length*0.14)
	droite(360/6)
	pentaKoch(levels-1,length*0.14)
	gauche(1.5*360/6)
	pentaKoch(levels-1,length*0.14)}
}
